@@ -1,6 +1,6 @@
 DYNAMIC=1
 UNIT=bits
-PROCFILE=/proc/dev/net
+PROCFILE=/proc/net/dev
 OUTPUT=plain
 TIMEOUT=666
 NETSTAT=netstat
