@@ -1,7 +1,7 @@
 /******************************************************************************
  *  bwm-ng                                                                    *
  *                                                                            *
- *  Copyright (C) 2004 Volker Gropp (vgropp@pefra.de)                         *
+ *  Copyright (C) 2004 Volker Gropp (bwmng@gropp.org)                         *
  *                                                                            *
  *  for more info read README.                                                *
  *                                                                            *
@@ -23,7 +23,7 @@
 
 #include "bwm-ng.h"
 
-
+/* chooses the correct get_iface_stats() to use */
 inline void get_iface_stats(char _n) {
 	switch (input_method) { 
 #ifdef NETSTAT		
@@ -61,9 +61,7 @@ inline void get_iface_stats(char _n) {
 }
 
 
-/* clear stuff */
-void sigint(int sig) FUNCATTR_NORETURN;
-
+/* clear stuff and exit */
 #ifdef __STDC__
 void deinit(char *error_msg, ...) FUNCATTR_NORETURN;
 void deinit(char *error_msg, ...) {
@@ -83,6 +81,7 @@ void deinit(...) {
         curs_set(1);
 #endif
 		endwin();
+        delscreen(myscr);
 	}
 #endif	
 #ifdef IOCTL
@@ -96,6 +95,8 @@ void deinit(...) {
 #if EXTENDED_STATS        
         /* clean avg list for each iface */
         for (local_if_count=0;local_if_count<if_count;local_if_count++) {
+            /* free the name */
+            free(if_stats[local_if_count].if_name);
             while (if_stats[local_if_count].avg.first!=NULL) {
                 list_p=if_stats[local_if_count].avg.first;
                 if_stats[local_if_count].avg.first=if_stats[local_if_count].avg.first->next;
@@ -127,6 +128,9 @@ void deinit(...) {
 }
 
 
+/* handle interrupt signal */
+void sigint(int sig) FUNCATTR_NORETURN;
+
 /* sigint handler */
 void sigint(int sig) {
 	/* we got a sigint, call deinit and exit */
@@ -134,18 +138,23 @@ void sigint(int sig) {
 }
 
 
+/* do the main thing */
 int main (int argc, char *argv[]) {
 	unsigned char idle_chars_p=0;
 	char ch;
 
 #ifdef PROC_NET_DEV 
 	strcpy(PROC_FILE,PROC_NET_DEV);
-#endif	
+#endif
+    
+    /* handle all cmd line and configfile options */
 	get_cmdln_options(argc,argv);
+    /* check them */
     if (output_method<0)
         deinit("invalid output selected\n");
     if (input_method<0)
         deinit("invalid input selected\n");
+    
     /* init total stats to zero */
 	memset(&if_stats_total,0,(size_t)sizeof(t_iface_stats));
 #ifdef HAVE_CURSES
@@ -159,6 +168,7 @@ int main (int argc, char *argv[]) {
 	signal(SIGINT,sigint);
 	signal(SIGTERM,sigint);
 #ifdef CSV	
+    /* get stats without verbose if cvs */
 	if (output_method==CSV_OUT && output_count>-1) {
 		get_iface_stats(0);
 		usleep(delay*1000);
@@ -180,46 +190,57 @@ int main (int argc, char *argv[]) {
 	if (output_method==PLAIN_OUT) printf("\033[2J"); /* clear screen for plain out */
     while (1) { /* do the main loop */
 #ifdef HTML
+        /* open the output file */
         if (output_method==HTML_OUT && out_file_path) {
             if (out_file) fclose(out_file);
             out_file=fopen(out_file_path,"w");
         }
 #endif
+        /* check if we will output anything */
         ch=!(output_method==PLAIN_OUT_ONCE
 #ifdef HTML
                     || (output_method==HTML_OUT && !daemonize)
 #endif
-            );        
-		if (ch) idle_chars_p=print_header(idle_chars_p); /* output only if looping */
-		get_iface_stats(ch); /* do the actual work, get and print stats */
+            ); 
+
+        /* print the header (info) if verbose */
+		if (ch) idle_chars_p=print_header(idle_chars_p); 
+        /* do the actual work, get and print stats */
+		get_iface_stats(ch); 
+
 #if HTML
+        /* close html tags */
+        if (output_method==HTML_OUT && html_header && daemonize)
+            fprintf((out_file==NULL ? stdout : out_file),"</table>\n</body>\n</html>\n");
+        /* close the output file, so we dont sit on it and block it */
         if (out_file && output_method==HTML_OUT && daemonize) { fclose(out_file); out_file=NULL; }
 #endif
+        /* handle the number of max outputs if set */
 		if ((
 #ifdef CSV					
 			    output_method==CSV_OUT || 
 #endif					
 				output_method==PLAIN_OUT) && output_count>0) { 
 			output_count--;
+            /* go to exit if we are done, will break the while(1) */
 			if (output_count==0) break;
 		}
+        /* either refresh the output and handle gui input */
 #ifdef HAVE_CURSES		
 		if (output_method==CURSES_OUT) {
 			refresh();
 			handle_gui_input(getch());
 		} else 
 #endif			
+        /* or just wait delay ms */
 			usleep(delay*1000);
-
+        
+        /* quit if we should only output once */
 		if (output_method==PLAIN_OUT_ONCE 
 #ifdef HTML				
 				|| (output_method==HTML_OUT && !daemonize)
 #endif
 				) break; /* dont loop when we have plain output */
-#ifdef HTML
-        if (output_method==HTML_OUT && html_header) 
-            fprintf(out_file==NULL ? stdout : out_file,"</table>\n</body>\n</html>\n");
-#endif        
     }
 #ifdef HTML	
 	/* do we need to output for html? */
