@@ -15,6 +15,17 @@
 
 	* retrieve.c: small cleanup of check_if_up().
 
+	* bwm-ng.c: fixed memleak of if_name and myscr in deinit().
+
+	* src/output.c: fixed from single to double quotes in order to valide with
+	w3c
+
+	* bwm-ng.conf-example: fixed default procfile to /proc/net/dev
+
+	* src/options.c: fixed error and exit if outfile cant be open
+
+	* src/bwm-ng.c: fixed html footer output to stdout when deamon, header and
+	outfile set
 
 02-20-2005	(0.5)	Volker Gropp <bwmng(at)gropp.org>
 	
